MAgECs from LSTM for MIMIC-III (refactoring of magec_utils.py)

--- a/ZmagecConsensus.ipynb
+++ b/ZmagecConsensus.ipynb
@@ -498,8 +498,8 @@
        "      <th>mlp_Insulin</th>\n",
        "      <th>mlp_Pregnancies</th>\n",
        "      <th>mlp_SkinThickness</th>\n",
-       "      <th>orig_prob_mlp</th>\n",
        "      <th>perturb_Age_prob_mlp</th>\n",
+       "      <th>orig_prob_mlp</th>\n",
        "      <th>perturb_BMI_prob_mlp</th>\n",
        "      <th>perturb_BloodPressure_prob_mlp</th>\n",
        "      <th>perturb_DiabetesPedigreeFunction_prob_mlp</th>\n",
@@ -522,8 +522,8 @@
        "      <td>0.233703</td>\n",
        "      <td>0.520776</td>\n",
        "      <td>0.305584</td>\n",
-       "      <td>0.063786</td>\n",
        "      <td>0.081521</td>\n",
+       "      <td>0.063786</td>\n",
        "      <td>0.127258</td>\n",
        "      <td>0.061483</td>\n",
        "      <td>0.064225</td>\n",
@@ -544,8 +544,8 @@
        "      <td>-0.251709</td>\n",
        "      <td>-0.297298</td>\n",
        "      <td>-0.009868</td>\n",
-       "      <td>0.744293</td>\n",
        "      <td>0.521750</td>\n",
+       "      <td>0.744293</td>\n",
        "      <td>0.632011</td>\n",
        "      <td>0.770142</td>\n",
        "      <td>0.720795</td>\n",
@@ -566,8 +566,8 @@
        "      <td>0.060988</td>\n",
        "      <td>-0.814133</td>\n",
        "      <td>-0.164530</td>\n",
-       "      <td>0.591666</td>\n",
        "      <td>0.464860</td>\n",
+       "      <td>0.591666</td>\n",
        "      <td>0.745703</td>\n",
        "      <td>0.658987</td>\n",
        "      <td>0.487878</td>\n",
@@ -591,20 +591,15 @@
        "1                            -0.095649     0.194162    -0.251709   \n",
        "2                            -0.229775     0.030192     0.060988   \n",
        "\n",
-       "features  mlp_Pregnancies  mlp_SkinThickness  orig_prob_mlp  \\\n",
-       "0                0.520776           0.305584       0.063786   \n",
-       "1               -0.297298          -0.009868       0.744293   \n",
-       "2               -0.814133          -0.164530       0.591666   \n",
+       "features  mlp_Pregnancies  mlp_SkinThickness  perturb_Age_prob_mlp  \\\n",
+       "0                0.520776           0.305584              0.081521   \n",
+       "1               -0.297298          -0.009868              0.521750   \n",
+       "2               -0.814133          -0.164530              0.464860   \n",
        "\n",
-       "features  perturb_Age_prob_mlp  perturb_BMI_prob_mlp  \\\n",
-       "0                     0.081521              0.127258   \n",
-       "1                     0.521750              0.632011   \n",
-       "2                     0.464860              0.745703   \n",
-       "\n",
-       "features  perturb_BloodPressure_prob_mlp  \\\n",
-       "0                               0.061483   \n",
-       "1                               0.770142   \n",
-       "2                               0.658987   \n",
+       "features  orig_prob_mlp  perturb_BMI_prob_mlp  perturb_BloodPressure_prob_mlp  \\\n",
+       "0              0.063786              0.127258                        0.061483   \n",
+       "1              0.744293              0.632011                        0.770142   \n",
+       "2              0.591666              0.745703                        0.658987   \n",
        "\n",
        "features  perturb_DiabetesPedigreeFunction_prob_mlp  perturb_Glucose_prob_mlp  \\\n",
        "0                                          0.064225                  0.062171   \n",
@@ -825,7 +820,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joined = mg.magec_models(magecs_mlp, magecs_rf, magecs_lr, Xdata=x_validation_p, Ydata=y_validation_p)"
+    "joined = mg.magec_models(magecs_mlp, \n",
+    "                         magecs_rf, \n",
+    "                         magecs_lr, \n",
+    "                         Xdata=x_validation_p, \n",
+    "                         Ydata=y_validation_p, \n",
+    "                         features=['Age', 'BloodPressure', 'BMI', 'Glucose', 'Insulin',\n",
+    "                                      'SkinThickness', 'DiabetesPedigreeFunction'])"
    ]
   },
   {
@@ -2830,13 +2831,16 @@
     "    return dfplot\n",
     "\n",
     "\n",
-    "def plot_stats(dfplot):\n",
+    "def plot_stats(dfplot, save=False):\n",
     "    dfplot = dfplot.set_index('Feature')\n",
     "    dfplot.plot(kind='bar', \n",
     "            stacked=True, \n",
     "            figsize=(10,6), \n",
     "            title='MAgEC (best) features by model and policy', \n",
-    "            rot=45);"
+    "            rot=45)\n",
+    "    if save:\n",
+    "        plt.savefig('pima_magec_stats.png', bbox_inches='tight')\n",
+    "    return"
    ]
   },
   {
@@ -2862,7 +2866,7 @@
     "con1 = con_stats(consensus1a)\n",
     "con3 = con_stats(consensus3a, label='CON@3')\n",
     "dfplot = df_stats(stats, con1, con3)\n",
-    "plot_stats(dfplot)"
+    "plot_stats(dfplot, True)"
    ]
   },
   {
