Some more stats for mimic models

--- a/MIMIC_MV_MAGEC.ipynb
+++ b/MIMIC_MV_MAGEC.ipynb
@@ -4877,6 +4877,148 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred1 = (joined.label == 1)\n",
+    "pred2a = (joined.orig_prob_rf < 0.5)\n",
+    "pred2b = (joined.orig_prob_rf >= 0.5)\n",
+    "pred3a = (joined.orig_prob_mlp < 0.5)\n",
+    "pred3b = (joined.orig_prob_mlp >= 0.5)\n",
+    "pred4a = (joined.orig_prob_lr < 0.5)\n",
+    "pred4b = (joined.orig_prob_lr >= 0.5)\n",
+    "pred5a = (joined.orig_prob_lstm < 0.5)\n",
+    "pred5b = (joined.orig_prob_lstm >= 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2083"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joined.case.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "157"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# EVERYONE missed it\n",
+    "joined[pred1 & pred2a & pred3a & pred4a & pred5a].case.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ONLY RF gets it right\n",
+    "joined[pred1 & pred2b & pred3a & pred4a & pred5a].case.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ONLY MLP gets it right\n",
+    "joined[pred1 & pred2a & pred3b & pred4a & pred5a].case.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "175"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ONLY LR gets it right\n",
+    "joined[pred1 & pred2a & pred3a & pred4b & pred5a].case.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "149"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ONLY LSTM gets it right\n",
+    "joined[pred1 & pred2a & pred3a & pred4a & pred5b].case.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
