mimic notebook one more line

--- a/MIMIC_MAGEC_PRESENTATION.ipynb
+++ b/MIMIC_MAGEC_PRESENTATION.ipynb
@@ -342,6 +342,283 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>hadm_id</th>\n",
+       "      <th>icustay_id</th>\n",
+       "      <th>timepoint</th>\n",
+       "      <th>event_time</th>\n",
+       "      <th>ventilated</th>\n",
+       "      <th>mv_start</th>\n",
+       "      <th>aniongap</th>\n",
+       "      <th>albumin</th>\n",
+       "      <th>bicarbonate</th>\n",
+       "      <th>bilirubin</th>\n",
+       "      <th>creatinine</th>\n",
+       "      <th>chloride</th>\n",
+       "      <th>glucose</th>\n",
+       "      <th>hematocrit</th>\n",
+       "      <th>hemoglobin</th>\n",
+       "      <th>lactate</th>\n",
+       "      <th>magnesium</th>\n",
+       "      <th>phosphate</th>\n",
+       "      <th>platelet</th>\n",
+       "      <th>potassium</th>\n",
+       "      <th>ptt</th>\n",
+       "      <th>inr</th>\n",
+       "      <th>pt</th>\n",
+       "      <th>sodium</th>\n",
+       "      <th>bun</th>\n",
+       "      <th>wbc</th>\n",
+       "      <th>heartrate_mean</th>\n",
+       "      <th>sysbp_mean</th>\n",
+       "      <th>diasbp_mean</th>\n",
+       "      <th>meanbp_mean</th>\n",
+       "      <th>resprate_mean</th>\n",
+       "      <th>tempc_mean</th>\n",
+       "      <th>spo2_mean</th>\n",
+       "      <th>glucose_mean</th>\n",
+       "      <th>age</th>\n",
+       "      <th>first_icu_stay</th>\n",
+       "      <th>adult_icu</th>\n",
+       "      <th>first_careunit</th>\n",
+       "      <th>diagnosis</th>\n",
+       "      <th>curr_service</th>\n",
+       "      <th>dischtime</th>\n",
+       "      <th>admission_type</th>\n",
+       "      <th>mort_icu</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>admittime</th>\n",
+       "      <th>los_icu</th>\n",
+       "      <th>mv_hours</th>\n",
+       "      <th>los_icu_hr</th>\n",
+       "      <th>mv_end</th>\n",
+       "      <th>los_hospital</th>\n",
+       "      <th>first_hosp_stay</th>\n",
+       "      <th>outtime</th>\n",
+       "      <th>intime</th>\n",
+       "      <th>ventnum</th>\n",
+       "      <th>prev_service</th>\n",
+       "      <th>transfertime</th>\n",
+       "      <th>ethnicity</th>\n",
+       "      <th>congestive_heart_failure</th>\n",
+       "      <th>cardiac_arrhythmias</th>\n",
+       "      <th>valvular_disease</th>\n",
+       "      <th>pulmonary_circulation</th>\n",
+       "      <th>peripheral_vascular</th>\n",
+       "      <th>hypertension</th>\n",
+       "      <th>paralysis</th>\n",
+       "      <th>other_neurological</th>\n",
+       "      <th>chronic_pulmonary</th>\n",
+       "      <th>diabetes_uncomplicated</th>\n",
+       "      <th>diabetes_complicated</th>\n",
+       "      <th>hypothyroidism</th>\n",
+       "      <th>renal_failure</th>\n",
+       "      <th>liver_disease</th>\n",
+       "      <th>peptic_ulcer</th>\n",
+       "      <th>aids</th>\n",
+       "      <th>lymphoma</th>\n",
+       "      <th>metastatic_cancer</th>\n",
+       "      <th>solid_tumor</th>\n",
+       "      <th>rheumatoid_arthritis</th>\n",
+       "      <th>coagulopathy</th>\n",
+       "      <th>obesity</th>\n",
+       "      <th>weight_loss</th>\n",
+       "      <th>fluid_electrolyte</th>\n",
+       "      <th>blood_loss_anemia</th>\n",
+       "      <th>deficiency_anemias</th>\n",
+       "      <th>alcohol_abuse</th>\n",
+       "      <th>drug_abuse</th>\n",
+       "      <th>psychoses</th>\n",
+       "      <th>depression</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>177</td>\n",
+       "      <td>43</td>\n",
+       "      <td>146828</td>\n",
+       "      <td>225852</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2186-10-03 20:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2186-10-03 20:00:00</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>46.1</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>305.0</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>24.6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>11.9</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>16.9</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>148.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>100.667</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TSICU</td>\n",
+       "      <td>T12 FRACTURE</td>\n",
+       "      <td>TRAUM</td>\n",
+       "      <td>2186-10-11 18:00:00</td>\n",
+       "      <td>EMERGENCY</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2186-10-01 23:15:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>2186-10-04 07:00:00</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2186-10-06 14:16:54</td>\n",
+       "      <td>2186-10-01 23:16:40</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2186-10-01 23:16:40</td>\n",
+       "      <td>white</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     subject_id  hadm_id  icustay_id  timepoint          event_time  \\\n",
+       "177          43   146828      225852         27 2186-10-03 20:00:00   \n",
+       "\n",
+       "     ventilated            mv_start  aniongap  albumin  bicarbonate  \\\n",
+       "177           1 2186-10-03 20:00:00      10.0      3.6         22.0   \n",
+       "\n",
+       "     bilirubin  creatinine  chloride  glucose  hematocrit  hemoglobin  \\\n",
+       "177        2.6         1.1     104.0    104.0        46.1        15.8   \n",
+       "\n",
+       "     lactate  magnesium  phosphate  platelet  potassium   ptt  inr    pt  \\\n",
+       "177      1.2        1.6        2.5     305.0        4.7  24.6  1.0  11.9   \n",
+       "\n",
+       "     sodium   bun   wbc  heartrate_mean  sysbp_mean  diasbp_mean  meanbp_mean  \\\n",
+       "177   143.0  17.0  16.9            89.0       148.0         77.0      100.667   \n",
+       "\n",
+       "     resprate_mean  tempc_mean  spo2_mean  glucose_mean   age  first_icu_stay  \\\n",
+       "177           24.0         NaN       96.0           NaN  32.0               1   \n",
+       "\n",
+       "     adult_icu first_careunit     diagnosis curr_service           dischtime  \\\n",
+       "177          1          TSICU  T12 FRACTURE        TRAUM 2186-10-11 18:00:00   \n",
+       "\n",
+       "    admission_type  mort_icu  gender           admittime  los_icu  mv_hours  \\\n",
+       "177      EMERGENCY         0       1 2186-10-01 23:15:00      5.0      11.0   \n",
+       "\n",
+       "     los_icu_hr              mv_end  los_hospital  first_hosp_stay  \\\n",
+       "177       111.0 2186-10-04 07:00:00          10.0                1   \n",
+       "\n",
+       "                outtime              intime  ventnum prev_service  \\\n",
+       "177 2186-10-06 14:16:54 2186-10-01 23:16:40      1.0         None   \n",
+       "\n",
+       "           transfertime ethnicity  congestive_heart_failure  \\\n",
+       "177 2186-10-01 23:16:40     white                       0.0   \n",
+       "\n",
+       "     cardiac_arrhythmias  valvular_disease  pulmonary_circulation  \\\n",
+       "177                  0.0               0.0                    0.0   \n",
+       "\n",
+       "     peripheral_vascular  hypertension  paralysis  other_neurological  \\\n",
+       "177                  0.0             0        0.0                 0.0   \n",
+       "\n",
+       "     chronic_pulmonary  diabetes_uncomplicated  diabetes_complicated  \\\n",
+       "177                0.0                       0                   0.0   \n",
+       "\n",
+       "     hypothyroidism  renal_failure  liver_disease  peptic_ulcer  aids  \\\n",
+       "177             0.0            0.0            0.0           0.0   0.0   \n",
+       "\n",
+       "     lymphoma  metastatic_cancer  solid_tumor  rheumatoid_arthritis  \\\n",
+       "177       0.0                0.0            0                   0.0   \n",
+       "\n",
+       "     coagulopathy  obesity  weight_loss  fluid_electrolyte  blood_loss_anemia  \\\n",
+       "177           0.0      0.0          0.0                0.0                0.0   \n",
+       "\n",
+       "     deficiency_anemias  alcohol_abuse  drug_abuse  psychoses  depression  \n",
+       "177                 0.0            0.0         0.0        0.0         0.0  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[(df.subject_id == case) & (df.timepoint == timepoint)].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
