--- a/MIMIC_MAGEC_PRESENTATION.ipynb
+++ b/MIMIC_MAGEC_PRESENTATION.ipynb
@@ -245,11 +245,11 @@
    "source": [
     "| Model     | Accuracy | Precision | Recall | F1 score | ROC AUC | Confusion Matrix              |\n",
     "| :--------:| :------: | :-------: | :-----:| :-------:| :-----: | :---------------------------: |\n",
-    "|  LR       |   0.66   |   0.32    |  0.66  |   0.44   |   0.71  |\\|1102&nbsp;564\\|<br />\\|140&nbsp;&nbsp;277\\||\n",
-    "|  RF       |   0.80   |   0.57    |  0.08  |   0.13   |   0.81  |\\|1643&nbsp;23\\|<br />\\|386&nbsp;&nbsp;31\\||\n",
-    "|  MLP      |   0.86   |   0.80    |  0.43  |   0.56   |   0.81  |\\|1621&nbsp;45\\|<br />\\|237&nbsp;180\\||\n",
-    "|  LSTM     |   0.87   |   0.76    |  0.51  |   0.61   |   0.84  |\\|1600&nbsp;&nbsp;66\\|<br />\\|203&nbsp;&nbsp;214\\||\n",
-    "|  ENSEMBLE |   0.87   |   0.83    |  0.45  |   0.59   |   0.84  |\\|1627&nbsp;&nbsp;39\\|<br />\\|226&nbsp;&nbsp;191\\||\n",
+    "|  LR       |   0.66   |   0.32    |  0.66  |   0.44   |   0.71  |1102&nbsp;564<br />140&nbsp;&nbsp;277|\n",
+    "|  RF       |   0.80   |   0.57    |  0.08  |   0.13   |   0.81  |1643&nbsp;23<br />386&nbsp;&nbsp;31|\n",
+    "|  MLP      |   0.86   |   0.80    |  0.43  |   0.56   |   0.81  |1621&nbsp;45<br />237&nbsp;180|\n",
+    "|  LSTM     |   0.87   |   0.76    |  0.51  |   0.61   |   0.84  |1600&nbsp;&nbsp;66<br />203&nbsp;&nbsp;214|\n",
+    "|  ENSEMBLE |   0.87   |   0.83    |  0.45  |   0.59   |   0.84  |1627&nbsp;&nbsp;39<br />226&nbsp;&nbsp;191|\n",
     "<br/>\n",
     "* note: Model Performance Metrics may slightly differ every time you train the models"
    ]
