Save mimic notebook results to json (and uncomment and load json data if need)

--- a/MIMIC_MAGEC_PRESENTATION.ipynb
+++ b/MIMIC_MAGEC_PRESENTATION.ipynb
@@ -331,6 +331,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ranks.to_json('mimic_ranks.json')\n",
+    "# consensus_auc.to_json('mimic_consensus_auc.json')\n",
+    "# consensus_recall.to_json('mimic_consensus_recall.json')\n",
+    "# rbos.to_json('mimic_rbos.json')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
