--- a/MIMIC_ANNO.ipynb
+++ b/MIMIC_ANNO.ipynb
@@ -332,54 +332,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def print_notes(case):\n",
-    "    print('\\n***NEXT NOTE***\\n\\n'.join(df_notes[df_notes.subject_id==case].\\\n",
-    "                                   sort_values('charttime')['text'].values.tolist()))\n",
-    "    \n",
-    "def make_panel(case, t_0=None):\n",
-    "    t_min = df_cohort[df_cohort.subject_id==case]['timepoint'].min()\n",
-    "    t_max = df_cohort[df_cohort.subject_id==case]['timepoint'].max()\n",
-    "    print(t_min, t_max)\n",
-    "    timepoint = t_min if t_0 is None else t_0\n",
-    "    mg.panel_plot(xst_validation.columns, features, stsc2, joined, case, timepoint, \n",
-    "                  models=('lr','rf','mlp','lstm', 'ensemble'), label='label', limit=8, rotate=25)\n",
-    "    \n",
-    "def best_feature(data, cols, feat=None):\n",
-    "    models = list(set([c.split('_')[-1] for c in cols]))\n",
-    "    if feat is not None:\n",
-    "        features = [feat]\n",
-    "    else:\n",
-    "        features = list(set(['_'.join(c.split('_')[1:-2]) for c in cols]))  \n",
-    "    best_feat = ''\n",
-    "    new_risk = None\n",
-    "    for feat in features:\n",
-    "        feat_risks = []\n",
-    "        orig_probs = []\n",
-    "        for model in models:\n",
-    "            magec = model + '_' + feat\n",
-    "            perturb = 'perturb_' + feat + '_prob_' + model\n",
-    "            orig = 'orig_prob_' + model\n",
-    "            if magec in data and perturb in data and orig in data:\n",
-    "                magec = data[magec]\n",
-    "                perturb = data[perturb]\n",
-    "                orig = data[orig]\n",
-    "                feat_risks.append(perturb)\n",
-    "                orig_probs.append(orig)\n",
-    "        # model average \n",
-    "        feat_risk = np.mean(feat_risks)\n",
-    "        orig_prob = np.mean(orig_probs)\n",
-    "        if new_risk is None or feat_risk < new_risk and feat_risk < orig_prob:\n",
-    "            new_risk = feat_risk\n",
-    "            best_feat = feat\n",
-    "    return pd.Series((best_feat, new_risk), index=['best_feat', 'new_risk'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -393,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joined[['best_feat', 'new_risk']] = joined.apply(lambda x: best_feature(x, prob_cols), axis=1)"
+    "joined[['best_feat', 'new_risk']] = joined.apply(lambda x: mimic.best_feature(x, prob_cols), axis=1)"
    ]
   },
   {
