Added transitions statistics for cases/timepoints

--- a/MAgEC_CaseStudies.ipynb
+++ b/MAgEC_CaseStudies.ipynb
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,28 +437,41 @@
     "    orig_prob_ensemble = x['orig_prob_ensemble']\n",
     "    best_feat = x['best_feat']\n",
     "    label = x['label']\n",
-    "    # Unexpected: ensemble_probability greater than 0.5, \n",
-    "    # all drivers normal, best feature is not a driver \n",
-    "    # patient ended up being ventillated\n",
-    "    cond1 = orig_prob_ensemble > threshold\n",
-    "    cond2 = np.all(abs(x[drivers]) <= sigmas)\n",
-    "    cond3 = np.isin(best_feat, drivers)\n",
-    "    cond4 = label == 1\n",
-    "    cond5 = x[best_feat] > sigmas\n",
-    "    if cond1 and cond2 and (not cond3) and cond4:\n",
+    "    # some predicates\n",
+    "    cond1 = orig_prob_ensemble > threshold  # models predict MV (ventilated)\n",
+    "    cond2 = np.all(abs(x[drivers]) <= sigmas)  # all drivers are 'normal'\n",
+    "    cond3 = np.isin(best_feat, drivers)  # MAgEC 'best feature' is a driver\n",
+    "    cond4 = x[best_feat] > sigmas # MAgEC 'best feature' is 'abnormal'\n",
+    "    cond5 = label == 1  # patient was ventilated\n",
+    "    # Unexpected (ventilated):\n",
+    "    # 1. ensemble_probability greater than 0.5, \n",
+    "    # 2. all drivers are normal\n",
+    "    # 3. best feature is not a driver \n",
+    "    # 4. patient was ventillated\n",
+    "    if cond1 and cond2 and (not cond3) and cond5:\n",
     "        return 'unexpexted_ventilated'\n",
-    "    # Expected: Best feature is a driver with an abnormal value, patient ended up being ventillated\n",
+    "    # Expected (ventilated): \n",
+    "    # 1. best feature is a driver\n",
+    "    # 2. best feature had an abnormal value\n",
+    "    # 2. patient was ventillated\n",
     "    if cond3 and cond4 and cond5:\n",
     "        return 'expected_ventilated'\n",
-    "    elif cond4:\n",
+    "    # Other (ventilated)\n",
+    "    elif cond5:\n",
     "        return 'other_ventilated'\n",
-    "    # Not Ventilated: Expected (prob<=thres) AND (drivers are normal) AND (label==0)\n",
-    "    elif (not cond1) and cond2 and (not cond4):\n",
-    "        return 'expected_notventilated'\n",
-    "    # Not Ventilated: UnExpected (prob<=thres) AND (one or more drivers are abnormal) (label==0)\n",
-    "    elif (not cond1) and (not cond2) and (not cond4):\n",
+    "    # Unexpected (not ventilated)\n",
+    "    # 1. ensemble_probability less than 0.5\n",
+    "    # 2. one or more drivers are abnormal\n",
+    "    # 3. patient was not ventilated\n",
+    "    elif (not cond1) and (not cond2) and (not cond5):\n",
     "        return 'unexpected_notventilated'\n",
-    "    elif (not cond4):\n",
+    "    # Expected (not ventilated)\n",
+    "    # 1. ensemble_probability less than 0.5\n",
+    "    # 2. all drivers are normal\n",
+    "    # 3. patient was not ventilated\n",
+    "    elif (not cond1) and cond2 and (not cond5):\n",
+    "        return 'expected_notventilated'\n",
+    "    elif (not cond5):\n",
     "        return 'other_notventilated'\n",
     "    else:\n",
     "        return 'other'"
@@ -466,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +503,7 @@
        "Name: stats, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +530,7 @@
        "Name: case, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,22 +541,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transitions(joined):\n",
+    "    group = joined[['case','timepoint','stats']].groupby('case')['timepoint','stats']\n",
+    "    transitions = dict()\n",
+    "    for case, x in group:\n",
+    "        times = x['timepoint']\n",
+    "        stats = x['stats']\n",
+    "        sorter = np.argsort(times)[::-1]  # larger value is earliest timepoint\n",
+    "        stats = np.array(stats)[sorter]\n",
+    "        if len(stats) > 0:\n",
+    "            prev = 0\n",
+    "            for i in range(1, len(stats)):\n",
+    "                t0 = stats[prev]\n",
+    "                t1 = stats[i]\n",
+    "                if (t0, t1) in transitions:\n",
+    "                    transitions[(t0,t1)] += 1\n",
+    "                else:\n",
+    "                    transitions[(t0,t1)] = 1\n",
+    "                prev = i\n",
+    "    return transitions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tran_dict = transitions(joined)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tran_df = pd.DataFrame.from_dict(tran_dict, orient='index').reset_index()\n",
+    "tran_df.columns = ['transition', 'counts']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transition</th>\n",
+       "      <th>counts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(unexpected_notventilated, unexpected_notventi...</td>\n",
+       "      <td>30364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>(other_ventilated, other_ventilated)</td>\n",
+       "      <td>2033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(expected_ventilated, expected_ventilated)</td>\n",
+       "      <td>1946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>(other_notventilated, other_notventilated)</td>\n",
+       "      <td>1149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>(other_notventilated, unexpected_notventilated)</td>\n",
+       "      <td>921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>(unexpected_notventilated, other_notventilated)</td>\n",
+       "      <td>604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(other_ventilated, expected_ventilated)</td>\n",
+       "      <td>520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(expected_ventilated, other_ventilated)</td>\n",
+       "      <td>509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>(expected_notventilated, unexpected_notventila...</td>\n",
+       "      <td>386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(unexpected_notventilated, expected_notventila...</td>\n",
+       "      <td>324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>(unexpexted_ventilated, unexpexted_ventilated)</td>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>(expected_notventilated, expected_notventilated)</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>(unexpexted_ventilated, other_ventilated)</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>(expected_notventilated, other_notventilated)</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>(unexpexted_ventilated, expected_ventilated)</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>(other_notventilated, expected_notventilated)</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>(other_ventilated, unexpexted_ventilated)</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>(expected_ventilated, unexpexted_ventilated)</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "2307"
+       "                                           transition  counts\n",
+       "0   (unexpected_notventilated, unexpected_notventi...   30364\n",
+       "9                (other_ventilated, other_ventilated)    2033\n",
+       "1          (expected_ventilated, expected_ventilated)    1946\n",
+       "13         (other_notventilated, other_notventilated)    1149\n",
+       "6     (other_notventilated, unexpected_notventilated)     921\n",
+       "12    (unexpected_notventilated, other_notventilated)     604\n",
+       "3             (other_ventilated, expected_ventilated)     520\n",
+       "2             (expected_ventilated, other_ventilated)     509\n",
+       "5   (expected_notventilated, unexpected_notventila...     386\n",
+       "4   (unexpected_notventilated, expected_notventila...     324\n",
+       "11     (unexpexted_ventilated, unexpexted_ventilated)      87\n",
+       "7    (expected_notventilated, expected_notventilated)      52\n",
+       "8           (unexpexted_ventilated, other_ventilated)      13\n",
+       "17      (expected_notventilated, other_notventilated)      12\n",
+       "14       (unexpexted_ventilated, expected_ventilated)       8\n",
+       "16      (other_notventilated, expected_notventilated)       8\n",
+       "10          (other_ventilated, unexpexted_ventilated)       7\n",
+       "15       (expected_ventilated, unexpexted_ventilated)       3"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "248+1666+250+143"
+    "tran_df.sort_values('counts', ascending=False)"
    ]
   },
   {
